fix: layout overflow

--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -1,4 +1,5 @@
 .wrapper {
   height: 100%;
   padding: 10px;
+  overflow: auto;
 }
